--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/settings.env.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/settings.env.j2
@@ -1,4 +1,8 @@
 {% raw %}
 {{ ansible_managed | comment }}
 DEBUG={{ backend_app_debug | bool }}
+DATABASE_NAME={{ backend_app_database_name }}
+DATABASE_USER={{ backend_app_database_user }}
+DATABASE_PASSWORD={{ backend_app_database_password }}
+DATABASE_HOST={{ backend_app_database_host }}
 {% endraw %}
