--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/settings.env.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/settings.env.j2
@@ -5,4 +5,5 @@ DATABASE_NAME={{ backend_app_database_name }}
 DATABASE_USER={{ backend_app_database_user }}
 DATABASE_PASSWORD={{ backend_app_database_password }}
 DATABASE_HOST={{ backend_app_database_host }}
+SECRET_KEY={{ backend_app_secret_key }}
 {% endraw %}
