--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/settings.env.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/settings.env.j2
@@ -6,4 +6,5 @@ DATABASE_USER={{ backend_app_database_user }}
 DATABASE_PASSWORD={{ backend_app_database_password }}
 DATABASE_HOST={{ backend_app_database_host }}
 SECRET_KEY={{ backend_app_secret_key }}
+ALLOWED_HOSTS={{ backend_app_allowed_hosts | join(',') }}
 {% endraw %}
