--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/systemd_service.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/systemd_service.j2
@@ -9,7 +9,7 @@ User = {{ backend_app_user }}
 Group = {{ backend_app_group }}
 WorkingDirectory = {{ backend_app_dir }}
 ExecStart = {{ backend_app_virtualenv_dir }}/bin/gunicorn \
-            --pid {{ backend_app_systemd_pid_file }} \
+            --config gunicorn.cfg \
             {{ backend_app_wsgi }}
 ExecReload = /bin/kill -s HUP $MAINPID
 ExecStop = /bin/kill -s TERM $MAINPID
