--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/settings.env.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/settings.env.j2
@@ -7,4 +7,5 @@ DATABASE_PASSWORD={{ backend_app_database_password }}
 DATABASE_HOST={{ backend_app_database_host }}
 SECRET_KEY={{ backend_app_secret_key }}
 ALLOWED_HOSTS={{ backend_app_allowed_hosts | join(',') }}
+STATIC_ROOT={{ backend_app_static_root }}
 {% endraw %}
