--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/systemd_service.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/systemd_service.j2
@@ -7,8 +7,8 @@ RuntimeDirectory = {{ backend_app_systemd_runtime_dir }}
 PIDFile = {{ backend_app_systemd_pid_file }}
 User = {{ backend_app_user }}
 Group = {{ backend_app_group }}
-WorkingDirectory = {{ backend_app_current_release }}
-ExecStart = {{ backend_app_virtualenv_dir }}/bin/gunicorn \
+WorkingDirectory = {{ deploy_helper.current_path }}
+ExecStart = {{ deploy_helper.current_path }}/venv/bin/gunicorn \
             --config gunicorn.cfg \
             {{ backend_app_wsgi }}
 ExecReload = /bin/kill -s HUP $MAINPID
