update jinja2 whitespace control for raw tags.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/settings.env.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/settings.env.j2
@@ -1,4 +1,4 @@
-{% raw %}
+{% raw -%}
 {{ ansible_managed | comment }}
 DEBUG={{ backend_app_debug | bool }}
 DATABASE_NAME={{ backend_app_database_name }}
@@ -8,4 +8,4 @@ DATABASE_HOST={{ backend_app_database_host }}
 SECRET_KEY={{ backend_app_secret_key }}
 ALLOWED_HOSTS={{ backend_app_allowed_hosts | join(',') }}
 STATIC_ROOT={{ backend_app_static_root }}
-{% endraw %}
+{% endraw -%}
