--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/gunicorn.cfg.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/gunicorn.cfg.j2
@@ -1,6 +1,6 @@
-{% raw %}
+{% raw -%}
 {{ ansible_managed | comment }}
 bind = "127.0.0.1:8080"
 workers = {{ backend_app_gunicorn_worker_count }}
 pidfile = "{{ backend_app_systemd_pid_file }}"
-{% endraw %}
+{% endraw -%}
