--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/venvrc.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/venvrc.j2
@@ -1,5 +1,5 @@
 {% raw -%}
 . $HOME/.bashrc;
-cd {{ deploy_helper.current_path }};
+cd {{ backend_app_deploy_helper.current_path }};
 . venv/bin/activate;
 {% endraw %}
