Update login info script.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/base/templates/login_info.sh.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/base/templates/login_info.sh.j2
@@ -3,9 +3,9 @@
 MEMORY_TOTAL=$(free -m | grep "Mem" | awk '{print $2" MB";}')
 MEMORY_USED=$(free -m | grep "Mem" | awk '{print $3" MB";}')
 SWAP_IN_USE=$(free -m | grep "Swap" | awk '{print $3" MB";}')
-LOAD_1=$(cat /proc/loadavg | awk {'print $1'})
-LOAD_5=$(cat /proc/loadavg | awk {'print $2'})
-LOAD_15=$(cat /proc/loadavg | awk {'print $3'})
+LOAD_1=$(< /proc/loadavg awk \{'print $1'\})
+LOAD_5=$(< /proc/loadavg awk \{'print $2'\})
+LOAD_15=$(< /proc/loadavg awk \{'print $3'\})
 NEEDS_RESTARTING_OUTPUT=$(needs-restarting -r)
 NEEDS_RESTARTING_RC=$?
 
@@ -14,7 +14,7 @@ BOLD="\e[1m"
 END_COLOR="\e[0m"
 
 echo "
-System: ------------- $(cat /etc/centos-release)$(uname -m)
+System: ------------- $(cat /etc/centos-release) $(uname -m)
 Kernel: ------------- $(uname -r)
 Hostname: ----------- $(uname -n)
 CPU usage: ---------- ${LOAD_1}, ${LOAD_5}, ${LOAD_15} (1, 5, 15 min)
