--- a/{{ cookiecutter.project_slug }}/provisioning/roles/base/templates/login_info.sh.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/base/templates/login_info.sh.j2
@@ -16,7 +16,7 @@ BOLD="\e[1m"
 END_COLOR="\e[0m"
 
 echo "
-System: ------------- $(cat /etc/centos-release) $(uname -m)
+System: ------------- $(< /etc/centos-release) $(uname -m)
 Kernel: ------------- $(uname -r)
 Hostname: ----------- $(uname -n)
 CPU usage: ---------- ${LOAD_1}, ${LOAD_5}, ${LOAD_15} (1, 5, 15 min)
