--- a/{{ cookiecutter.project_slug }}/provisioning/roles/base/templates/neofetch.sh.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/base/templates/neofetch.sh.j2
@@ -1,3 +1,5 @@
 #! /usr/bin/env bash
 
-/usr/local/bin/neofetch --config /etc/neofetch/neofetch_custom_config.conf
+if [ -n "$PS1" ]; then
+  /usr/local/bin/neofetch --config /etc/neofetch/neofetch_custom_config.conf
+fi
