Run an ASGI server via gunicorn + uvicorn.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/systemd_service.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/systemd_service.j2
@@ -11,7 +11,7 @@ Group = {{ backend_app_group }}
 WorkingDirectory = {{ backend_app_deploy_helper.current_path }}
 ExecStart = {{ backend_app_deploy_helper.current_path }}/venv/bin/gunicorn \
             --config gunicorn.cfg \
-            {{ backend_app_wsgi }}
+            {{ backend_app_asgi }}
 ExecReload = /bin/kill -s HUP $MAINPID
 ExecStop = /bin/kill -s TERM $MAINPID
 {% endraw %}
