Reimplement starting service after vagrant mount to use systemd configuration rather than a separate vagrant script

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/systemd_service.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/systemd_service.j2
@@ -16,4 +16,4 @@ ExecReload = /bin/kill -s HUP $MAINPID
 ExecStop = /bin/kill -s TERM $MAINPID
 {% endraw %}
 [Install]
-WantedBy = multi-user.target
+WantedBy={% if backend_app_vagrant_mount %}{{ backend_app_venv_mount_systemd_name }}{% else %}multi-user.target{% endif %}
