--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/systemd_service.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/systemd_service.j2
@@ -1,8 +1,12 @@
 {% raw %}{{ ansible_managed | comment }}{% endraw %}
 [Unit]
 Description = {{ cookiecutter.project_name }}
-After = network.target
 {% raw %}
+After = network.target
+{% if backend_app_vagrant_mount %}
+RequiresMountsFor={{ backend_app_deploy_helper.current_path }} {{ backend_app_deploy_helper.current_path }}/venv
+{% endif %}
+
 [Service]
 RuntimeDirectory = {{ backend_app_systemd_runtime_dir }}
 PIDFile = {{ backend_app_systemd_pid_file }}
@@ -14,6 +18,7 @@ ExecStart = {{ backend_app_deploy_helper.current_path }}/venv/bin/gunicorn \
             {{ backend_app_asgi }}
 ExecReload = /bin/kill -s HUP $MAINPID
 ExecStop = /bin/kill -s TERM $MAINPID
+
 [Install]
-WantedBy={% if backend_app_vagrant_mount %}{{ backend_app_vagrant_venv_systemd_mount_name }}{% else %}multi-user.target{% endif %}
+WantedBy={% if backend_app_vagrant_mount %}{{ backend_app_vagrant_systemd_mount_name }}{% else %}multi-user.target{% endif %}
 {% endraw %}
