--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/systemd_service.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/systemd_service.j2
@@ -14,7 +14,7 @@ User = {{ backend_app_user }}
 Group = {{ backend_app_group }}
 WorkingDirectory = {{ backend_app_deploy_helper.current_path }}
 ExecStart = {{ backend_app_deploy_helper.current_path }}/venv/bin/gunicorn \
-            --config gunicorn.cfg \
+            --config gunicorn_config.py \
             {{ backend_app_asgi }}
 ExecReload = /bin/kill -s HUP $MAINPID
 ExecStop = /bin/kill -s TERM $MAINPID
