Dynamically calculate the number of gunicorn workers from the cpu count.
Switch to using the default gunicorn worker class.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/gunicorn_config.py.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/gunicorn_config.py.j2
@@ -1,7 +1,9 @@
 {% raw -%}
 {{ ansible_managed | comment }}
+from multiprocessing import cpu_count
+
 worker_class = "uvicorn.workers.UvicornWorker"
 bind = "127.0.0.1:8080"
-workers = {{ backend_app_gunicorn_worker_count }}
+workers = cpu_count() * 2 + 1
 pidfile = "{{ backend_app_systemd_pid_file }}"
 {% endraw -%}
