Load gunicorn config from the .env file. Move the gunicorn_config.py file from an ansible template to a regular python file in the backend app.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/settings.env.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/settings.env.j2
@@ -7,4 +7,6 @@ DATABASE_PASSWORD={{ backend_app_database_password }}
 DATABASE_HOST={{ backend_app_database_host }}
 SECRET_KEY={{ backend_app_secret_key }}
 ALLOWED_HOSTS={{ backend_app_allowed_hosts | join(',') }}
+GUNICORN_PID_FILE={{ backend_app_gunicorn_pid_file }}
+GUNICORN_BIND={{ backend_app_gunicorn_bind }}
 {% endraw -%}
