--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/settings.env.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/settings.env.j2
@@ -7,6 +7,7 @@ DATABASE_PASSWORD={{ backend_app_database_password }}
 DATABASE_HOST={{ backend_app_database_host }}
 SECRET_KEY={{ backend_app_secret_key }}
 ALLOWED_HOSTS={{ backend_app_allowed_hosts | join(',') }}
+CORS_ORIGIN_WHITELIST={{ backend_app_cors_origin_whitelist | join(',') }}
 GUNICORN_PID_FILE={{ backend_app_gunicorn_pid_file }}
 GUNICORN_BIND={{ backend_app_gunicorn_bind }}
 {% endraw -%}
