Add django-rest-framework-simplejwt to the backend app.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/settings.env.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/settings.env.j2
@@ -6,6 +6,7 @@ DATABASE_USER={{ backend_app_database_user }}
 DATABASE_PASSWORD={{ backend_app_database_password }}
 DATABASE_HOST={{ backend_app_database_host }}
 SECRET_KEY={{ backend_app_secret_key }}
+JWT_SIGNING_KEY={{ backend_app_jwt_signing_key }}
 ALLOWED_HOSTS={{ backend_app_allowed_hosts | join(',') }}
 CORS_ORIGIN_WHITELIST={{ backend_app_cors_origin_whitelist | join(',') }}
 GUNICORN_PID_FILE={{ backend_app_gunicorn_pid_file }}
