--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/systemd_service.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/systemd_service.j2
@@ -4,7 +4,7 @@ Description = {{ cookiecutter.project_name }}
 {% raw %}
 After = network.target
 {% if backend_app_vagrant_mount %}
-RequiresMountsFor={{ backend_app_deploy_helper.current_path }} {{ backend_app_deploy_helper.current_path }}/venv
+RequiresMountsFor={{ backend_app_deploy_helper.current_path }}
 {% endif %}
 
 [Service]
@@ -13,7 +13,7 @@ PIDFile = {{ backend_app_gunicorn_pid_file }}
 User = {{ backend_app_user }}
 Group = {{ backend_app_group }}
 WorkingDirectory = {{ backend_app_deploy_helper.current_path }}
-ExecStart = {{ backend_app_deploy_helper.current_path }}/venv/bin/gunicorn \
+ExecStart = {{ backend_app_virtualenv_dir }}/bin/gunicorn \
             --config gunicorn_config.py \
             {{ backend_app_wsgi }}
 ExecReload = /bin/kill -s HUP $MAINPID
