--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/systemd_service.j2
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/templates/systemd_service.j2
@@ -6,7 +6,6 @@ After = network.target
 
 [Service]
 RuntimeDirectory = {{ backend_app_systemd_runtime_dir }}
-PIDFile = {{ backend_app_gunicorn_pid_file }}
 User = {{ backend_app_user }}
 Group = {{ backend_app_group }}
 WorkingDirectory = {{ backend_app_deploy_helper.current_path }}
@@ -14,7 +13,8 @@ ExecStart = {{ backend_app_virtualenv_dir }}/bin/gunicorn \
             --config gunicorn_config.py \
             {{ backend_app_asgi }}
 ExecReload = /bin/kill -s HUP $MAINPID
-ExecStop = /bin/kill -s TERM $MAINPID
+KillMode = mixed
+TimeoutStopSec = 5
 
 [Install]
 WantedBy = multi-user.target
